--- a/src/index.html
+++ b/src/index.html
@@ -24,42 +24,32 @@
   <app-root></app-root>
 </body>
 <script>
-  let newWorker;
-
-  // The click event on the notification
-  document.getElementById('reload').addEventListener('click', function () {
-    newWorker.postMessage({
-      action: 'skipWaiting'
-    });
-  });
-
-  if ('serviceWorker' in navigator) {
-    // Register the service worker
-    navigator.serviceWorker.register('/service-worker.js').then(reg => {
-      reg.addEventListener('updatefound', () => {
-
-        // An updated service worker has appeared in reg.installing!
-        newWorker = reg.installing;
-
-        newWorker.addEventListener('statechange', () => {
-
-          // Has service worker state changed?
-          switch (newWorker.state) {
-            case 'installed':
-
-              // There is a new service worker available, show the notification
-              if (navigator.serviceWorker.controller) {
-                let notification = document.getElementById('notification ');
-                notification.className = 'show';
-              }
-
-              break;
-          }
-        });
-      });
-    });
-
-  }
+  window.isUpdateAvailable = new Promise(function(resolve, reject) {
+			// lazy way of disabling service workers while developing
+			if ('serviceWorker' in navigator && ['localhost', '127'].indexOf(location.hostname) === -1) {
+				// register service worker file
+				navigator.serviceWorker.register('serviceworker.js')
+					.then(reg => {
+						reg.onupdatefound = () => {
+							const installingWorker = reg.installing;
+							installingWorker.onstatechange = () => {
+								switch (installingWorker.state) {
+									case 'installed':
+										if (navigator.serviceWorker.controller) {
+											// new update available
+											resolve(true);
+										} else {
+											// no update available
+											resolve(false);
+										}
+										break;
+								}
+							};
+						};
+					})
+					.catch(err => console.error('[SW ERROR]', err));
+			}
+		});
 </script>
 
 </html>
