--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 			// lazy way of disabling service workers while developing
 			if ('serviceWorker' in navigator && ['localhost', '127'].indexOf(location.hostname) === -1) {
 				// register service worker file
-				navigator.serviceWorker.register('serviceworker.js')
+				navigator.serviceWorker.register('./serviceworker.js')
 					.then(reg => {
 						reg.onupdatefound = () => {
 							const installingWorker = reg.installing;
