--- a/src/index.html
+++ b/src/index.html
@@ -32,4 +32,5 @@
       .catch(err => console.error('Error', err));
   }
 </script>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </html>
