--- a/src/index.html
+++ b/src/index.html
@@ -32,4 +32,12 @@
       .catch(err => console.error('Error', err));
   }
 </script>
+<script
+  type="module"
+  src="https://unpkg.com/@ionic/pwa-elements@latest/dist/ionicpwaelements/ionicpwaelements.esm.js"
+></script>
+<script
+  nomodule
+  src="https://unpkg.com/@ionic/pwa-elements@latest/dist/ionicpwaelements/ionicpwaelements.js"
+></script>
 </html>
